# MCMC

./: .gitignore  README.md
gen_distribution/: distribution_calculator.cu  distributions.cu  histogrammer.py
gen_sequence/: autocorrelation_calculator.cu  autocorrelation_plotter.py
mc_integrate_sequence/: distributions.cu  integration_histplotter.py  mc_integrator.cu
stepsize/: CMakeLists.txt
stepsize/graphing/: MCMC Analysis.ipynb  StepSizeAnalysis.ipynb
stepsize/include/: fileio.hpp  metropolis.hpp  random.hpp  statistics.hpp
stepsize/src/: main.cpp
visualization/: GlauberVisualization.ipynb
xsection/: CMakeLists.txt  Makefile.old
xsection/analysis/: Untitled.ipynb  XSectionAnalysis.ipynb
xsection/include/: Common.cuh  Distributions.cuh  EnumerateArray.hpp  Integrate.cuh  IntegrateR2.cuh  IntegrateSAB.cuh  IntegrationOutputHandler.cuh  Metropolis.cuh  ProgressBar.cuh  Statistics.cuh  TemplateBuilder.cuh  Timing.cuh  common.cuh  idk.cuh  integrate.cuh  metropolis.cuh  statistics.cuh  timing.hpp
xsection/src/: main.cu
xsection/tools/: MCMCMacro.py  MacroGenerator.ipynb  XSectionAnalysis.ipynb  XSectionAnalysis.py
